@@ -173,7 +173,7 @@ class Std {
 			Class = { __name__ : ["Class"] };
 			Enum = {};
 			Void = { __ename__ : ["Void"] };
-		#elseif as3gen
+		#elseif as3
 			null;
 		#elseif flash9
 			Bool = __global__["Boolean"];
